@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.2 2005/02/24 14:08:28 wiz Exp $
+$NetBSD: distinfo,v 1.3 2006/01/21 13:08:37 rillig Exp $
 
-SHA1 (mod_auth_pgsql-2.0.2b1.tar.gz) = 536c98eba309ae5bba1dfeab14406a42e768bb7a
-RMD160 (mod_auth_pgsql-2.0.2b1.tar.gz) = e59c01721c4b5e9b32180b3e6beb909553d81758
-Size (mod_auth_pgsql-2.0.2b1.tar.gz) = 15930 bytes
+SHA1 (mod_auth_pgsql-2.0.3.tar.gz) = 1c9d04373b3196b8a4cf64527a824a8c29b38582
+RMD160 (mod_auth_pgsql-2.0.3.tar.gz) = f77194dcb63c57c75413495ce316d392f6e74a2f
+Size (mod_auth_pgsql-2.0.3.tar.gz) = 15474 bytes
