@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.12598 2006/01/21 13:03:35 tron Exp $
+$NetBSD: CHANGES,v 1.12599 2006/01/21 13:09:15 rillig Exp $
 
 Changes to the packages collection and infrastructure in 2006:
 
@@ -454,3 +454,4 @@ Changes to the packages collection and infrastructure in 2006:
 	Added devel/vtcl version 1.6.0 [agc 2006-01-21]
 	Added devel/p5-UNIVERSAL-require version 0.10 [rillig 2006-01-21]
 	Updated www/apache2 to 2.0.55nb5 [tron 2006-01-21]
+	Updated www/ap2-auth-pgsql to 2.0.3 [rillig 2006-01-21]
